--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="header">
             <div class="header-container">
                 <div class="logo">
-                    <img src="goldmedal-newlogo.png">
+                    <img src="Resorces/goldmedal-newlogo.png">
                 </div>
                 <div class="header-menu">
                     <div class="head1">Home</div>
@@ -35,7 +35,7 @@
             </div>
         </div>
         <div class="desktop-view-set">
-            <img src="slider_2.jpg">
+            <img src="Resorces/slider_2.jpg">
             <div class="arrow-left">
                 <?xml version="1.0" ?>
                 <!DOCTYPE svg PUBLIC '-//W3C//DTD SVG 1.1//EN' 'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'><svg
@@ -77,7 +77,7 @@
 
 
                     <div class="grid2">
-                        <img src="air-modular-range.jpg">
+                        <img src="Resorces/air-modular-range.jpg">
                         <div class="overlay">
                             <div class="content">Air Modular</div>
                         </div>
@@ -91,7 +91,7 @@
                         </div>
                     </div>
                     <div class="grid4">
-                        <img src="fan.jpg">
+                        <img src="Resorces/fan.jpg">
                         <div class="overlay">
                             <div class="content">Fan</div>
                         </div>
@@ -99,7 +99,7 @@
                 </div>
                 <div class="grid-stack2">
                     <div class="grid1">
-                        <img src="led-lightning.jpg">
+                        <img src="Resorces/led-lightning.jpg">
                         <div class="overlay">
                             <div class="content">LED Lighting</div>
                         </div>
@@ -111,7 +111,7 @@
                         </div>
                     </div>
                     <div class="grid3">
-                        <img src="wires-and-cables.jpg">
+                        <img src="Resorces/wires-and-cables.jpg">
                         <div class="overlay">
                             <div class="content">Wires and Cables</div>
                         </div>
@@ -133,7 +133,7 @@
 
 
                     <div class="grid2">
-                        <img src="mcb-and-dp.jpg">
+                        <img src="Resorces/mcb-and-dp.jpg">
                         <div class="overlay">
                             <div class="content">MCBs & DBs</div>
                         </div>
@@ -145,7 +145,7 @@
                         </div>
                     </div>
                     <div class="grid4">
-                        <img src="nixon-modular.jpg">
+                        <img src="Resorces/nixon-modular.jpg">
                         <div class="overlay">
                             <div class="content">Nixon Modular</div>
                         </div>
@@ -153,7 +153,7 @@
                 </div>
                 <div class="grid-stack4">
                     <div class="grid1">
-                        <img src="accessories.jpg">
+                        <img src="Resorces/accessories.jpg">
                         <div class="overlay">
                             <div class="content">Accessories</div>
                         </div>
@@ -165,7 +165,7 @@
                         </div>
                     </div>
                     <div class="grid3">
-                        <img src="entertainment.jpg">
+                        <img src="Resorces/entertainment.jpg">
                         <div class="overlay">
                             <div class="content">Entertainment</div>
                         </div>
@@ -185,7 +185,7 @@
                         </div>
                     </div>
                     <div class="grid2">
-                        <img src="goldmedal-remote.jpg">
+                        <img src="Resorces/goldmedal-remote.jpg">
                         <div class="overlay">
                             <div class="content">Home Automation </div>
                         </div>
@@ -197,7 +197,7 @@
                         </div>
                     </div>
                     <div class="grid4">
-                        <img src="i-touch-series.jpg">
+                        <img src="Resorces/i-touch-series.jpg">
                         <div class="overlay">
                             <div class="content">i-Feel Switch</div>
                         </div>
@@ -221,7 +221,7 @@
         </div>
         <div class="img-slide">
             <div class="slider">
-                <img src="home-banner-002.jpg">
+                <img src="Resorces/home-banner-002.jpg">
                 <div class="slider-text">
                     <h3>Empowering<br>Your Dreams.</h3>
                 </div>
@@ -259,11 +259,11 @@
             </div>
         </div>
         <div class="sign">
-            <img src="switch-for-amazing.png">
+            <img src="Resorces/switch-for-amazing.png">
         </div>
         <div class="footer-container">
             <div class="footer">
-                <div class="logo"><img src="goldmedal-newlogo.png" alt=""></div>
+                <div class="logo"><img src="Resorces/goldmedal-newlogo.png" alt=""></div>
                 <div class="about">
                     <div class="about-heading">About Goldmedal</div>
                     <div class="his">History & Infrastructure</div>
@@ -375,6 +375,6 @@
         <div class="contactUs">
             <p>Contact Up</p>
         </div>
-        <div class="whatsicon"><img src="whatsapp-web4.png"></div></div>
+        <div class="whatsicon"><img src="Resorces/whatsapp-web4.png"></div></div>
     </body>
 </html>
